--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class = "centered">
             <div class = "large">
-                <div class ="thick">Telc C1 Hochschule</div>
+                <div class ="thick">test Telc C1 Hochschule</div>
             </div>
         </div>
         <form action="https://www.google.com/search" method="get">
