--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class = "centered">
             <div class = "large">
-                <div class ="thick">test Telc C1 Hochschule</div>
+                <div class ="thick">Telc C1 Hochschule</div>
             </div>
         </div>
         <form action="https://www.google.com/search" method="get">
@@ -18,7 +18,7 @@
             <button>Google Search</button>
         </form>
         <div class = "thick">
-            <a class="btn btn-primary" href="./page1.html" role="button">Modelltests</a>
+            <a class="btn btn-primary" href="./page1.html" role="button">Modelltests123</a>
             <a class="btn btn-primary" href="./page2.html" role="button">&Uumlbungen</a>
             <a class="btn btn-primary" href="./page3.html" role="button">Nachrichten</a>
             <a class="btn btn-primary" href="./page4.html" role="button">Grammatik</a>
