--- a/page6.html
+++ b/page6.html
@@ -11,7 +11,7 @@
             <img src="/Bilder/Zeitformen_2.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" loading="lazy">
         </div>
         <div>
-            <img src="/Bilder/Zeitformen_1.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" loading="lazy">
+            <img src="Zeitformen_1.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" loading="lazy">
         </div>
     </body>
 </html>
