--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Deutsch lernen</title>
     </head>
     <body>
-        <nav class="collapse navbar-collapse">
+        <nav class="bg-light border navbar navbar-expand-md navbar-light">
               <a class="navbar-brand" href="/"><span class="blue">B</span><span class="red">e</span><span class="yellow">t</span><span class="green">a</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
