--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
+            <div class="container-fluid">
               <a class="navbar-brand" href="/"><span class="blue">B</span><span class="red">e</span><span class="yellow">t</span><span class="green">a</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,6 +49,7 @@
                   </li>
                 </ul>
               </div>
+            </div>
           </nav>
         <form action="https://www.google.com/search" method="get">
             <input autocomplete="off" autofocus name="q" placeholder="Query" type="search">
