--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav me-auto mt-2">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
