--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 
 <html lang="de">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, width=device-width">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>Deutsch lernen</title>
+        <title>Deutsch</title>
     </head>
     <body>
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/"><span class="blue">B</span><span class="red">e</span><span class="yellow">t</span><span class="green">a</span></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <a class="navbar-brand" href="#"><span class="blue">B</span><span class="red">e</span><span class="yellow">t</span><span class="green">a</span></a>
+              <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav me-auto mt-2">
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
@@ -51,9 +53,9 @@
               </div>
             </div>
           </nav>
-        <form action="https://www.google.com/search" method="get">
-            <input autocomplete="off" autofocus name="q" placeholder="Query" type="search">
-            <button>Google Search</button>
-        </form>
+        <form target="_blank" action="https://www.google.com/search" method="get">
+          <input autocomplete="off" autofocus name="q" placeholder="Search" type="search">
+      </form>
     </body>
+
 </html>
