--- a/page2.html
+++ b/page2.html
@@ -35,6 +35,22 @@
             </div>
         </div>
 
+
+        <div class="pb-1 mb-1 border-bottom border-primary">
+            <div class="row">
+                <div class="col-md-auto">
+                    <a class="btn btn-primary" href= https://aussprachetraining.goethe.de/login role="button">link</a>
+                </div>
+                <div class="col">
+                    <div class="row">Verlag: Goethe</div>
+                    <div class="row">Niveau: Aussprache</div>
+                </div>
+            </div>
+        </div>
+
+
+
+
         <div class="pb-1 mb-1 border-bottom border-primary">
             <div class="row">
                 <div class="col-md-auto">
